# IteratedLocalSearch-pibic

./: README.md
TSP/: CMakeLists.txt
TSP/Deprecated/: Dúvidas  mainParallel1.cpp
TSP/Paralelo/: CMakeLists.txt  TSP  a280.res  comments.cpp  d198.res  functions.cpp  functions.h  main.cpp
TSP/Parallel/: CMakeLists.txt  Makefile  TspPar  executionHelper  functions.cpp  functions.h  main.cpp  maintest.cpp  node.cpp  node.h  pfunctions.cpp  scanner.cpp  scanner.h  tsp-isaacKosloski
TSP/Parallel/bench-res-test/: a280.res  d198.res  lin318.res
TSP/Parallel/src/: component.cpp  component.h  functions.cpp  functions.h  main.cpp  mainExec.cpp  scanner.cpp  scanner.h
TSP/Results/Sequencial/: a280lk.res
TSP/Sequencial/: CMakeCache.txt  Makefile  TSP  TspSeq  a280.res  cmake_install.cmake  d198.res  db  doubleBridge.res  doubleBridge2.res  fl1577.res  functions.cpp  functions.h  greedy.res  lin318.res  main.cpp  node.cpp  node.h  pcb1173.res  pcb442.res  rat783.res  scanner.cpp  twoopt.res  u1060.res
TSP/Sequential/: CMakeCache.txt  TspSeq  executionHelper  functions.cpp  functions.h  main.cpp  mainTemp.cpp  node.cpp
TSP/Sequential/src/: component.cpp  functions.cpp  functions.h  mainExec.cpp  node.h
TSP/Solutions/Parallel/: d198.sol  fl1677.sol
TSP/Solutions/Parallel/a280/: a280i5.sol
TSP/Solutions/Parallel/fl1577/: fl1577i3GDBO2A3.sol
TSP/Solutions/Parallel/lin318/: lin318i3GDBO2A5.sol  lin318i4GDBO2A5.sol
TSP/Solutions/Parallel/pcb442/: pcb442i3GDBO2A4.sol
TSP/Solutions/Parallel/rat783/: rat783i3GDBO2A3.sol
TSP/Solutions/Sequencial/: a280.res  a280.sol  d198.sol
TSP/Solutions/Sequential/a280/: a280i3GDBO2.sol  a280i3GDBO2A1.sol  a280i3GDBO2A2.sol  a280i3GDBO2A3.sol  a280i3GDBO2A4.sol  a280i3GDBO2A5.sol  a280i3GDBO2B1.sol
TSP/Solutions/Sequential/d198/: d198i3GDBO2.sol  d198i3GDBO2A1.sol  d198i3GDBO2A2.sol  d198i3GDBO2A3.sol  d198i3GDBO2A4.sol  d198i3GDBO2A5.sol  d198i3GDBO2B1.sol  d198i3GDBO2Test.sol
TSP/execHelper/: a280.run  d198.run  d198.tsp  lin318.run  main.cpp  pcb442.run  rat783.run  run
(+1143 files in other folders)
